small-and-fast: recreate the diagrams using chart.js
The diagrams showing just how much faster Git performs than Subversion
were originally created using the Google Charts API, in
b6d341c0a (first graphs and new services, 2012-04-30).

In the meantime, the Google Charts API joined so many other things in
the Google Graveyard (see https://killedbygoogle.com/ for more details).

This means that the diagrams 404ed, and users were left wondering what
should have been demonstrated on this page.

But when a door closes, another door opens, and there are wonderful
contenders in this time and age, and we do not even have to display
static images, we can switch to proper, Javascript-backed charts where
you can even hover over the chart and see the exact number!

So let's do that. Based on https://www.chartjs.org/, reimplement those
charts. That also offers a wildly improved readability of the entire
thing, compared to the somewhat cryptic Google Chart URLs.

This fixes https://github.com/git/git-scm.com/issues/1862.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/assets/sass/typography.scss
+++ b/assets/sass/typography.scss
@@ -371,3 +371,12 @@ div.more {
 .text-center {
   text-align: center;
 }
+
+barchart {
+  width: 90px;
+  height: 125px;
+  padding-right: 5px;
+  padding-left: 5px;
+  display: inline-block;
+  background-color: #fcfcfa7f;
+}
