--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -16,5 +16,6 @@
 <script src="{{ relURL "js/jquery.defaultvalue.js" }}"></script>
 <script src="{{ relURL "js/session.min.js" }}"></script>
 {{ if eq (.Scratch.Get "section") "search" }}<script src="{{ relURL "pagefind/pagefind-ui.js" }}"></script>{{ end }}
+{{ if eq .Page.Params.needs_chartjs true }}<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>{{ end }}
 {{ $js := resources.Get "js/application.js" | resources.ExecuteAsTemplate "js/application.js" . | resources.Minify }}
 <script src="{{ $js.RelPermalink }}"></script>
