--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -68,6 +68,18 @@
                 text-decoration: dashed 1px underline;
             }
 
+            #front-nav img {
+                filter: none;
+            }
+
+            div.monitor {
+                filter: brightness(.85);
+            }
+
+            .monitor a {
+                color: #dbd7d7;
+            }
+
             #documentation #main div.verseblock pre.content {
                 color: var(--light-font-color);
                 background-color: #5e5951;
