--- a/assets/sass/lists.scss
+++ b/assets/sass/lists.scss
@@ -96,7 +96,7 @@ ol#about-nav {
       font-size: 13px;
       line-height: 20px;
       text-align: center;
-      color: var(--font-color);
+      color: var(--light-font-color-darker-35);
       opacity: 0.9;
       @include background-image-2x($baseurl + "images/icons/nav-circles", 90px, 180px);
 
