--- a/assets/sass/dark-mode.css
+++ b/assets/sass/dark-mode.css
@@ -18,6 +18,9 @@
     $main-bg:                 #fcfcfa;
     $bg-color:                #f0efe7 url($baseurl + "images/bg/body.jpg");
     $sidebar-bg-color:        #efefe7;
+    $no-changes-bg-color:     #f5f5f3;
+    $dropdown-active-bg-color: #fff;
+    $versions-footer-bg-color: #eae9e0;
 
     @if $mode == dark {
         $orange:                  #d7834f;
@@ -37,6 +40,9 @@
         $main-bg:                 #333333;
         $bg-color:                #2a2a2aff;
         $sidebar-bg-color:        #3d3d3a;
+        $no-changes-bg-color:     #515150;
+        $dropdown-active-bg-color: #515150;
+        $versions-footer-bg-color: #1f1f1e;
 
         :root#{$theme} {
             div#masthead {
@@ -100,6 +106,14 @@
             input.pagefind-ui__search-input {
                 background: var(--main-bg);
             }
+
+            #reference-version {
+                background-color: rgba(111, 110, 105, 0.33);
+            }
+
+            #l10n-versions-dropdown footer a {
+                color: #6969dd;
+            }
         }
     }
 
@@ -132,6 +146,9 @@
         --main-bg:                      #{$main-bg};
         --sidebar-bg-color:             #{$sidebar-bg-color};
         --bg-color:                     #{$bg-color};
+        --no-changes-bg-color:          #{$no-changes-bg-color};
+        --dropdown-active-bg-color:     #{$dropdown-active-bg-color};
+        --versions-footer-bg-color:     #{$versions-footer-bg-color};
     }
 }
 
