--- a/assets/sass/sidebar.scss
+++ b/assets/sass/sidebar.scss
@@ -52,9 +52,9 @@ aside.sidebar.active {
     border: none;
     left: 0;
     width: 1.6rem;
-    &:focus + .sidebar {
-      @include responsive-sidebar-ui;
-    }
+  }
+  .sidebar-btn:focus + .sidebar, .sidebar:focus-within {
+    @include responsive-sidebar-ui;
   }
   aside{
     &.sidebar {
